# db-metadata

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/queries/: export_run_comparison.sql  fk_downstream.sql  fk_upstream.sql
examples/verify/: README.md
src/db_migration/: __init__.py  cli.py  config.py
src/db_migration/extract/: __init__.py  inspector.py
src/db_migration/extract/dialects/: __init__.py  base.py  mysql.py  oracle.py  postgresql.py  sqlserver.py
src/db_migration/models/: __init__.py  metadata.py
src/db_migration/store/: __init__.py  writer.py
src/db_migration/store/schema/: v1.sql
src/db_migration/verify/: __init__.py  entities.py  from_export.py  from_source.py  keys.py  reconcile.py  runner.py  sqlite_collector.py
src/db_migration/verify/queries/: __init__.py  mysql.sql  oracle.sql  postgresql.sql  sqlserver.sql
tests/: test_verify.py  test_verify_e2e.py  test_writer.py
