[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-migration"
version = "0.1.0"
description = "Export database metadata from live databases to local SQLite as SSoT"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Anchor Migration contributors" }]
keywords = [
    "database",
    "metadata",
    "sqlite",
    "schema",
    "migration",
    "lineage",
    "sqlalchemy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0,<3.0"]
mysql = ["pymysql>=1.1,<2.0"]
postgresql = ["psycopg[binary]>=3.1,<4.0"]
sqlserver = ["pyodbc>=5.0,<6.0"]
dev = ["pytest>=8.0,<9.0"]
all = [
    "oracledb>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "pyodbc>=5.0,<6.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
db-migration = "db_migration.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/db_migration"]

[tool.hatch.build.targets.wheel.force-include]
"src/db_migration/store/schema" = "db_migration/store/schema"
"src/db_migration/verify/queries" = "db_migration/verify/queries"

[tool.hatch.build.targets.sdist]
include = ["src/db_migration", "README.md", "LICENSE"]

[project.urls]
Homepage = "https://github.com/anchor-migration/db-metadata"
Repository = "https://github.com/anchor-migration/db-metadata"
Issues = "https://github.com/anchor-migration/db-metadata/issues"
Documentation = "https://github.com/anchor-migration/migration-hub"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
